# browser-history

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  README.md  cookie-requirements.txt  mypy.ini  pyproject.toml  pytest.ini  setup.cfg  setup.py  test.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new-browser-support.md
.github/workflows/: python-docs.yml  python-mypy.yml  python-package.yml  python-publish.yml
browser_history/: __init__.py  browsers.py  cli.py  exceptions.py  generic.py  outputs.py  utils.py
browser_history/utils/: __init__.py  platform.py  timezone.py
docs/: API.rst  browsers.rst  cli.rst  conf.py  contributing.rst  functionality.rst  index.rst  outputs.rst  quickstart.rst  requirements.txt  usage.rst  utils.rst
tests/: context.py  test_browsers.py  test_cli.py  test_default_browser.py  test_generic.py  test_import.py  test_none_values.py  test_utils.py  utils.py
tests/test_homedirs/Linux/.config/chromium/Profile/: Bookmarks  History
tests/test_homedirs/Linux/.config/google-chrome/Profile/: History
tests/test_homedirs/Linux/.librewolf/: places.sqlite
tests/test_homedirs/Linux/.mozilla/firefox/profile/: places.sqlite
tests/test_homedirs/Linux/snap/firefox/common/.mozilla/firefox/empty/: places.sqlite
tests/test_homedirs/Linux/snap/firefox/common/.mozilla/firefox/profile/: places.sqlite
tests/test_homedirs/Windows/AppData/Local/BraveSoftware/Brave-Browser/User Data/Profile 1/: History
tests/test_homedirs/Windows/AppData/Local/BraveSoftware/Brave-Browser/User Data/Profile 2/: History
tests/test_homedirs/Windows/AppData/Local/Epic Privacy Browser/User Data/Default/: Bookmarks  History
tests/test_homedirs/Windows/AppData/Local/Microsoft/Edge/User Data/Profile 1/: History
tests/test_homedirs/Windows/AppData/Local/Microsoft/Edge/User Data/Profile 2/: History
tests/test_homedirs/Windows/AppData/Roaming/Mozilla/Firefox/Profiles/Profile 1/: places.sqlite
tests/test_homedirs/Windows/AppData/Roaming/Mozilla/Firefox/Profiles/Profile 2/: places.sqlite
tests/test_homedirs/Windows/AppData/Roaming/Opera Software/Opera Stable/: Bookmarks  History
typeshed/: pbkdf2.pyi
typeshed/keyring/: __init__.pyi  backend.pyi  core.pyi  credentials.pyi  errors.pyi
typeshed/pyaes/: __init__.pyi  aes.pyi  blockfeeder.pyi  util.pyi
