[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "browser-history"
authors = [{ name = "Samyak Sarnayak", email = "samyak201@gmail.com" }]
maintainers = [
    { name = "Samyak Sarnayak", email = "samyak201@gmail.com" },
    { name = "Emmanuel Obara", email = "emmanuelobarany@gmail.com" },
]
description = "A python module to extract browser history"
readme = "README.md"
requires-python = ">=3.6"
keywords = [
    "browser",
    "history",
    "browser-history",
    "chrome",
    "firefox",
    "safari",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "black~=24.4.0",
    "build~=1.2.1",
    "flake8-comprehensions~=3.14.0",
    "flake8~=7.0.0",
    "pre-commit~=3.5.0",
    "pytest-cov~=5.0.0",
    "pytest~=8.1.1",
    "python-dateutil~=2.9.0",
    "twine~=5.0.0"
]
docs = [
    "Sphinx==7.3.7",
    "sphinx-argparse==0.4.0",
    "sphinx-autodoc-typehints==2.1.0",
    "sphinx-rtd-theme==2.0.0"
]

[project.scripts]
browser-history = "browser_history.cli:main"

[project.urls]
Homepage = "https://github.com/browser-history/browser-history/"
Documentation = "https://browser-history.readthedocs.io/en/stable/"
Repository = "https://github.com/browser-history/browser-history.git"
Issues = "https://github.com/browser-history/browser-history/issues"
Changelog = "https://github.com/browser-history/browser-history/releases"

[tool.setuptools.dynamic]
version = { attr = "browser_history.__version__" }

[tool.coverage.run]
source = ["browser_history"]
branch = true

[tool.pytest]
testpaths = ["tests"]
markers = { browser_name = "browser name used in default browser tests" }
