[metadata]
name = browser-history
version = attr: browser_history.__version__
description = A python module to extract browser history
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pesos/browser-history
author = Samyak Sarnayak
author_email = samyak201@gmail.com
license = Apache License 2.0
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
project_urls =
    Documentation = https://github.com/pesos/browser-history/docs
    Source = https://github.com/pesos/browser-history/
    Tracker = https://github.com/pesos/browser-history/

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
zip_safe = false

[options.packages.find]
exclude =
    tests

[options.entry_points]
console_scripts =
    browser-history = browser_history.cli:main

[bdist_wheel]
universal = true

[run]
source=./browser_history
branch=true

[flake8]
max-line-length = 88
extend-ignore = A001, E203, P101, P103, W503

[tool:pytest]
testpaths = tests
markers =
    browser_name: browser name used in default browser tests
python_files = *test_*.py

[pylint]
ignored-modules=winreg
[pylint.basic]
good-names=i,e
